# MeTwo

./: .gitignore  CMakeLists.txt  MeTwo.sln  README.md  bootstrap  dist.sh  ffserver.conf  nginx.conf
MeTwo.Server/: MeTwo.Server.csproj  Program.cs  Startup.cs
MeTwo.Server/Properties/: launchSettings.json
MeTwo.Server/wwwroot/: index.html  script.js
RobotClient/: client.py  controls.py
arduino/Serial_test/: Serial_test.ino
arduino/Servo-joystick_test1/: Servo-joystick_test1.ino
client/: Client.cpp  MRAA_PWMDriver.cpp  MRAA_PWMDriver.hpp  TcpClient.cpp  TcpClient.hpp  build.sh  build_db.sh  build_db_new.sh  build_pi.sh  client.c  controls.c  controls.h  controls.hpp  controls_db.cpp  controls_dragonboard.c  echo.c  echo.cpp  main.cpp  robot.cpp  tcp_client.cpp  tcp_client.hpp  testPWMServoDriver.cpp
deploy/: CMakeLists.txt  deploy.sh
dragon/: CMakeLists.txt  MRAA_PWMDriver.cpp  MRAA_PWMDriver.h.gch  MRAA_PWMDriver.hpp  build_db.sh  build_db_echo.sh  build_test.sh  capture.cpp  controls.cpp  controls.hpp  controls_db.cpp  controls_db_pwm.cpp  echo.cpp  robot.cpp  robot.hpp  servoDriverControls.c  servoDriverControls.cpp  tcp_client.cpp  tcp_client.hpp  test.sh  testPWMServoDriver.cpp
dragon/test/PWM/: CMakeLists.txt
pi/: controls.c
server/: Browser.js  CameraState.js  Constants.js  ControlState.js  Robot.js  Signals.js  State.js  bower.json  index.js  package-lock.json  package.json  server.js
server/pages/: application.js  (+5 more)
wsTest/: client.js  client2.js  index.html  index2.html  package-lock.json  server.js
wwwroot/: index.html  script.js
(+5 files in other folders)
